--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -91,73 +91,73 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
         <div class='cell auto'>
           <h3 class='center' id='collaborators'>Collaborators</h3>
           <hr class="center-ball">
-          <div class='grid-x grid-container medium-offset-3 large-offset-4 grid-padding-y grid-padding-x add-padd' >
-            <div class='medium-6 large-5 cell'>
+        </div>
+        <div class='cell'>
+          <div class='grid-x grid-padding-y grid-padding-x' >
+            <div class='medium-6 medium-offset-3 large-offset-4 large-5 cell'>
               <div class='grid-x grid-padding-x grid-margin-y'>
                 <div class='cell shrink border-right'>
                   <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
                 </div>
-                <div class='cell auto border-right'>
+                <div class='cell auto'>
                   <h5>
-                    Patricia Opresko, Ph.D
+                    <b>Patricia Opresko, Ph.D</b><br/>
+                    <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i> Website</a>
+                  </h5>
+                </div>
+              </div>
+              <div class='grid-x grid-padding-x grid-margin-y'>
+                <div class='cell shrink border-right'>
+                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+                </div>
+                <div class='cell auto'>
+                  <h5>
+                    <b>Charleen Chu, Ph.D.</b><br/>
+                    <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i> Website</a>
                   </h5> 
                 </div>
-                <div class='cell shrink'>
-                  <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i></a>
-                </div>
               </div>
-              <div class='grid-x grid-padding-x'>
+              <div class='grid-x grid-padding-x grid-margin-y'>
                 <div class='cell shrink border-right'>
                   <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
                 </div>
-                <div class='cell auto border-right'>
-                  <h5>Charleen Chu, Ph.D.
-                    </h5> 
-                </div>
-                <div class='cell shrink'>
-                  <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i></a>
+                <div class='cell auto'>
+                  <h5>
+                    <b>Steven Chan,MD, PhD, FAHA</b><br/>
+                    <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i> Website</a>
+                  </h5> 
                 </div>
               </div>
-              <div class='grid-x grid-padding-x'>
+              <div class='grid-x grid-padding-x grid-margin-y'>
                 <div class='cell shrink border-right'>
                   <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
                 </div>
-                <div class='cell auto border-right'>
-                  <h5>Steven Chan,MD, PhD, FAHA
-                    </h5> 
-                </div>
-                <div class='cell shrink'>
-                  <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i></a>
+                <div class='cell auto '>
+                  <h5>
+                    <b>Tzahi Cohen-Karni</b><br/>
+                    <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i> Website</a>
+                  </h5> 
                 </div>
               </div>
-              <div class='grid-x grid-padding-x'>
+              <div class='grid-x grid-padding-x grid-margin-y'>
                 <div class='cell shrink border-right'>
                   <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
                 </div>
-                <div class='cell auto border-right'>
-                  <h5>Tzahi Cohen-Karni
+                <div class='cell auto'>
+                  <h5>
+                    <b>Michael Jurckzak</b><br/>
+                    <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i> Website</a>
                     </h5> 
-                </div>
-                <div class='cell shrink'>
-                  <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i></a>
-                </div>
-              </div>
-              <div class='grid-x grid-padding-x'>
-                <div class='cell shrink border-right'>
-                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-                </div>
-                <div class='cell auto border-right'>
-                  <h5>Michael Jurckzak
-                    </h5> 
-                </div>
-                <div class='cell shrink'>
-                  <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i></a>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+        <div class='cell'>
           <h3 class='center' id='resources'>Resources</h3>
           <hr class="center-ball">
+        </div>
+        <div class='cell'>
           <div class='grid-x grid-container grid-padding-x grid-padding-y medium-up-1 add-padd' >
             <div class='cell'>
               <h4 class='bold'>Aging related resources</h4>
