--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,20 +1,15 @@
 <% include ../partials/head %>
 <% include ../partials/header %>  
-<div
-class='bg-img bg-main-header'
-style='background-image:url("img/bg/bg1.jpg")'>
+
+  <div class="twentytwenty-container bg-img bg-main-header">
+    <img src="img/bg/young-versus-old-aging-new.jpg" class='big-bg-img'/>
+    <img src="img/bg/young-versus-old-aging-old.jpg" class='big-bg-img' />
+  </div>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       Decoding the metabolic responses to DNA damage that drive aging
     </h1>
   </div>
-</div>
-<div class="large-8 cell">
-  <div class="twentytwenty-container" style='height: 400px'>
-    <img src="img/1_1.jpg" />
-    <img src="img/1_2.jpg" />
-  </div>
-</div>
 <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
   <div class='medium-6 large-7 cell out-vc'  data-equalizer-watch>
     <div class='in-vc'>
