Saving my changes

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head %>
 <% include ../partials/header %>  
 
-  <div class="twentytwenty-container bg-img bg-main-header">
+  <div class="twentytwenty-container bg-main-header">
     <img src="img/bg/young-versus-old-aging-new.jpg" class='big-bg-img'/>
     <img src="img/bg/young-versus-old-aging-old.jpg" class='big-bg-img' />
   </div>
