--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,20 @@
+<footer>
+  <div class="row" data-equalizer>
+    <div class="medium-9 columns out-vc" data-equalizer-watch>
+      <div class="in-vc">
+        <p style="margin:0px;"><small>Copyright © 2019 Gurkar Laboratory / Department of Medicine / University of Pittsburgh / All Rights Reserved.</small></p>
+      </div>
+    </div>
+    <div class="medium-3 columns out-vc" data-equalizer-watch>
+      <div class="in-vc center ">
+        <a target="blank" href="https://twitter.com/healthspan_AUG"><i class="social_header fi-social-twitter size-36"></i></a>
+        <a target="blank" href="https://www.linkedin.com/in/aditigurkar/"><i class="social_header fi-social-linkedin size-36"></i></a>
+        <a target="blank" href="https://www.instagram.com/thegurkarlab/"><i class="social_header fi-social-instagram size-36"></i></a>
+      </div>
+    </div>
+
+  </div>
+</footer>
 
 <script
 src="https://code.jquery.com/jquery-3.2.1.js"
