Saving my changes

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,11 @@
 <footer>
-  <div class="row" data-equalizer>
-    <div class="medium-9 columns out-vc" data-equalizer-watch>
+  <div class="grid-x" data-equalizer>
+    <div class="auto cell out-vc" data-equalizer-watch>
       <div class="in-vc">
         <p style="margin:0px;"><small>Copyright © 2019 Gurkar Laboratory / Department of Medicine / University of Pittsburgh / All Rights Reserved.</small></p>
       </div>
     </div>
-    <div class="medium-3 columns out-vc" data-equalizer-watch>
+    <div class="shrink cell out-vc" data-equalizer-watch>
       <div class="in-vc center ">
         <a target="blank" href="https://twitter.com/healthspan_AUG"><i class="social_header fi-social-twitter size-36"></i></a>
         <a target="blank" href="https://www.linkedin.com/in/aditigurkar/"><i class="social_header fi-social-linkedin size-36"></i></a>
