Saving my changes

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-  <div class="grid-x" data-equalizer>
+  <div class="grid-x grid-container grid-padding-x" data-equalizer>
     <div class="auto cell out-vc" data-equalizer-watch>
       <div class="in-vc">
         <p style="margin:0px;"><small>Copyright © 2019 Gurkar Laboratory / Department of Medicine / University of Pittsburgh / All Rights Reserved.</small></p>
