--- a/public/css/app.css
+++ b/public/css/app.css
@@ -92,9 +92,18 @@ body {
   color: #439aa5;
 }
 
+footer > div > div > div > a > .social_header {
+  color: #439aa5;
+}
+
+footer {
+  box-shadow: -1px -2px 3px 0 rgba(0, 0, 0, 0.2);
+}
+
 .social_header {
   color: #fff;
 }
+
 
 .mobile-menu {
   background-color: #ffffff;
@@ -145,6 +154,7 @@ body {
   background-size: cover;
 }
 
+
 #hm-00 {
   -webkit-transition: all .50s ease-in-out;
   -moz-transition: all .50s ease-in-out;
@@ -177,17 +187,35 @@ body {
 }
 
 .hamburger-overlay {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(14,24,45, 0.4);
   padding: 10px;
   padding-top: 150px;
   height: 100%;
 }
 
+.hamburger-overlay:hover {
+  background-color: rgba(14,24,45,.9);
+}
+
+
 .hamburger-menu-link {
+  margin-left: 0;
+  font: normal 15px/1rem StratumBlack,Arial,sans-serif;
+  font-size: .75rem;
+  text-transform: uppercase;
+  letter-spacing: .08em;
+  padding-left: .08em;
   color: #fff;
   position: relative;
-  line-height: 1.3em;
-}
+  display: block;
+  text-decoration: none;
+  padding: 1rem 0 1rem 13.88889%;
+  transition-property: background, color, padding-left;
+  transition-duration: 0.3s, 0.3s, 0.5s;
+  transition-timing-function: cubic-bezier(0.25, 0.25, 0.75, 0.75), cubic-bezier(0.25, 0.25, 0.75, 0.75), cubic-bezier(0.19, 1, 0.22, 1);
+  transition-delay: 0s, 0s, 0s;
+  font-weight: bold;
+  }
 
 .hamburger-menu-link:hover {
   background: rgba(255,255,255,.03);
@@ -203,11 +231,31 @@ body {
   transition-duration: .7s,.5s;
 }
 
+.main-navigation-title {
+  position: relative;
+  font: normal 30px/1 StratumBold,Arial,sans-serif;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  letter-spacing: .01em;
+  margin: 0 3.88889% 1.66667em;
+  cursor: pointer;
+}
+
+.main-navigation-title:before {
+  height: 1px;
+  width: 40px;
+  content: '';
+  position: absolute;
+  top: -.85rem;
+  left: .06em;
+  background: #fff;
+}
+
 .my-arrow {
   height: .7rem;
   width: .7rem;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 5.88889%;
   -ms-transform: translate(-50px,-.35rem);
   transform: translate(-50px,-.35rem);
@@ -219,11 +267,8 @@ body {
 }
 
 /* banners */
-.big-bg-img {
-  width: 100%;
-}
-
 .bg-main-header {
+  padding: 40vh 0 !important;
   height: 100vh;
 }
 
@@ -237,7 +282,6 @@ body {
   flex-direction: 'row';
   justify-items: 'center';
 }
-
 .bg-center-container {
   max-width: 650px;
   width: 100%;
@@ -996,6 +1040,25 @@ hr.center-ball:before {
   margin-bottom: 30px;
 }
 
+.my-custom-arrow {
+  font-size: 1.3rem;
+}
+
+#arrow-left {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+}
+
+#arrow-right {
+  position: absolute;
+  top: 50%;
+  right: 5px;
+}
+
+.reveal-overlay {
+  z-index: 10005;
+}
 
 @media print, screen and (min-width: 40em) {
   .my-small-h4 {
