--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -12,185 +12,123 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
 </div>
 <div class='grid-x grid-container add-padd' >
   <div class='cell'>
-    <% if (researchData.title === 'Decoding the role of DNA in post-mitotic cells') {
-      %>
-      <div class='grid-x grid-padding-x'>
-        <div class='auto cell'>
-          <p><em>“How does DNA damage impact replicative vs. post mitotic tissues with age?”</em></p>
-          <p>
-            <b>Cardiovascular disease:</b> Problems with DNA repair pathways have been observed in cardiac failure patients. Additionally, recent data suggests that pediatric patients treated with genotoxic agents disabling or life-threatening age-related diseases compared to their siblings.  This includes stroke, myocardial infarction, congestive heart failure, of insulin resistance and cardiovascular disease. 
-          </p>
-          <p>
-            <b>Neurocognitive decline:</b> Similarly, patients with childhood brain tumors requiring therapy targeted to the central nervous system experience neurocognitive decline much earlier than their siblings.  Patients with defects in nucleotide excision repair (NER) exhibit several neurological symptoms such as microcephaly, mental retardation and deafness. Cockayne syndrome (CS), trichothiodystrophy (TTD) and Ataxia Telangiectasia (AT) are all characterized as neurodegenerative syndromes and are linked with dysregulated DNA repair. This evidence provides us with a rationale that improper DNA repair contributes to neurodegenerative disorders.
-          </p>
-          <p>
-            Therefore, we are interested in molecular mechanisms modulated by DNA damage which impact age-associated diseases such as: 
-            <ul>
-              <li>cardiovascular disease</li>
-              <li>skeletal muscle degeneration</li>
-              <li>neurodegenration</li>
-            </ul>
-          </p>
-        </div>
+    <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
+      <div class='cell'>
+        <h3 class='center'>Recent Publications</h3>
+        <hr class="center-ball">
       </div>
-      <%
-      } else if (researchData.title === 'Remapping metabolism upon DNA damage')
-      {
-      %>
-      <div class='grid-x grid-padding-x'>
-        <div class='cell auto'>
-          <p>
-            The central hypothesis that guides our research is that stochastic, endogenous nuclear
-            DNA damage alters cellular and metabolic programs, leading to progression of multiple,
-            age- related degenerative diseases. There is growing evidence that nuclear DNA (nDNA)
-            damage accumulates with age and correlates with pathology in several tissues.
-            Furthermore, there is evidence that nDNA repair capacity declines with age. We use a
-            physiologically relevant system in which DNA repair is attenuated, leading to an
-            accelerated accumulation of endogenous damage, to investigate the molecular and
-            cellular response circuitry.
-          </p>
-          <p>
-            Depletion of a DNA repair endonuclease, ERCC1-XPF in mice (as in humans), leads to
-            premature onset of molecular, structural and functional changes that mimic normal aging
-            and the mice spontaneously develop numerous age-related diseases in their 6 month
-            lifespan. Surprisingly, loss of functional <em>Ercc1</em> (strictly a nuclear DNA repair enzyme)
-            causes accrual of defective mitochondria and an increase in reactive oxygen species
-            (ROS) <em>in vitro</em> and <em>in vivo</em>. This suggests that nuclear DNA damage leads to
-            mitochondrial reprogramming, and identification of the signaling mechanism(s) that
-            drive this is likely to yield novel insights about molecular mechanisms of aging, as well
-            as, novel targets for preventing cell senescence and age-related decline.
-          </p>
-          <p>
-            To study this we use the strengths of two very powerful model systems: the nematode,
-            Caenorhabditis elegans (<em>C. elegans</em>), a genetically tractable model organism to identify
-            pathways involved in mitochondrial dysfunction in response to nuclear DNA damage,
-            and mice, a physiologically relevant model in which to pursue “hits” to ultimately
-            support rapid translation of new knowledge to human aging.
-          </p>
-        </div>
-      </div>
-      <% } else if (researchData.title === "Defining your composite 'biological' age")
-      {%>
-        <div class='grid-x grid-padding-x'>
-          <div class='cell auto'>
-            <p><em>“Why people age differently?”</em></p>
-            <p>Although, one’s chronological age maybe the same (the age that you calculate from your birth certificate), two people who are 65, rarely feel the same. One seems healthy, strong, may complain occasionally about joint pain- but overall is fit, whereas, the other suffers from diabetes, dementia and heart disease. WHY? 
-            </p>
-            <p>
-              When most of us think about AGE, we are always talking about our CHRONOLOGICAL AGE: How old we are. Not how old we actually feel- our BIOLOGICAL AGE. This distinction is very important, because people AGE differently! 
-            </p>
-            <p>
-              We are looking at what is inherently different in ‘fast agers’ (people who seem to age quickly- have multiple diseases etc) vs ‘slow agers’ (people who seem to be healthy in their 70s). Collaborating with a set of talented geriatricians, data analysts and biologists we want to find a unique fingerprint that differentiates between these two groups.
-            </p>
-          </div>
-        </div>
-      <%
-      } else if (researchData.title === "Research Interests") {
-      %>
-      <div class='grid-x grid-padding-x'>
-        <div class='cell auto'>
-          <h3 class='center' id='collaborators'>Collaborators</h3>
-          <hr class="center-ball">
-        </div>
-        <div class='cell'>
-          <div class='grid-x grid-padding-y grid-padding-x' >
-            <div class='medium-6 medium-offset-3 large-offset-4 large-5 cell'>
-              <div class='grid-x grid-padding-x grid-margin-y' data-equalizer>
-                <div class='cell shrink border-right out-vc' data-equalizer-watch>
-                  <div class='in-vc'>
-                    <h5 class='no-margin'><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-                  </div>
-                </div>
-                <div class='cell auto out-vc' data-equalizer-watch>
-                  <div class="in-vc">
-                    <h5>
-                      <b>Patricia Opresko, Ph.D</b><br/>
-                      <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i> Website</a>
-                    </h5>
-                  </div>
-                </div>
-              </div>
-              <div class='grid-x grid-padding-x grid-margin-y'>
-                <div class='cell shrink border-right'>
-                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-                </div>
-                <div class='cell auto'>
-                  <h5>
-                    <b>Charleen Chu, Ph.D.</b><br/>
-                    <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i> Website</a>
-                  </h5> 
-                </div>
-              </div>
-              <div class='grid-x grid-padding-x grid-margin-y'>
-                <div class='cell shrink border-right'>
-                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-                </div>
-                <div class='cell auto'>
-                  <h5>
-                    <b>Steven Chan,MD, PhD, FAHA</b><br/>
-                    <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i> Website</a>
-                  </h5> 
-                </div>
-              </div>
-              <div class='grid-x grid-padding-x grid-margin-y'>
-                <div class='cell shrink border-right'>
-                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-                </div>
-                <div class='cell auto '>
-                  <h5>
-                    <b>Tzahi Cohen-Karni</b><br/>
-                    <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i> Website</a>
-                  </h5> 
-                </div>
-              </div>
-              <div class='grid-x grid-padding-x grid-margin-y'>
-                <div class='cell shrink border-right'>
-                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-                </div>
-                <div class='cell auto'>
-                  <h5>
-                    <b>Michael Jurckzak</b><br/>
-                    <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i> Website</a>
-                    </h5> 
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class='cell add-padd'>
-          <h3 class='center' id='resources'>Resources</h3>
-          <hr class="center-ball">
+      <div class='grid-x medium-up-3'>
+        <% for (let i = 0; i < 3; i++) { %>
           <div class='cell'>
-            <div class='grid-x grid-container grid-padding-x grid-padding-y medium-up-1 add-padd' >
-              <div class='cell'>
-                <h4 class='bold'>Aging related resources</h4>
-                <p>
-                  AFAR: <a href='https://www.afar.org/'>https://www.afar.org/</a><br/>
-                  Aging Research and Drug Discovery Meeting: <a href='http://www.agingpharma.org'>http://www.agingpharma.org</a><br/>
-                  Aging Science talks: <a href='http://www.lamminglab.org/agingscitalks.html'>http://www.lamminglab.org/agingscitalks.html</a><br/>
-                  CSH Mechanism of Aging: <a href='https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20'>https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20</a>
-                </p>
+            <div class='my-card'>
+              <h4 class='publication-heading'>
+                <%-results.publications[i].title %>
+              </h4>
+              <h5 class='publiction-journel'><%=results.publications[i].journal %></h5>
+            </div>
+          </div>
+        <% } %>
+      </div>
+    </div>
+    <div class='cell auto'>
+      <h3 class='center' id='collaborators'>Collaborators</h3>
+      <hr class="center-ball">
+    </div>
+    <div class='cell'>
+      <div class='grid-x grid-padding-y grid-padding-x' >
+        <div class='medium-6 medium-offset-3 large-offset-4 large-5 cell'>
+          <div class='grid-x grid-padding-x grid-margin-y' data-equalizer>
+            <div class='cell shrink border-right out-vc' data-equalizer-watch>
+              <div class='in-vc'>
+                <h5 class='no-margin'><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
               </div>
-              <div class='cell'>
-                <h4 class='bold'>Metabolism related resources</h4>
-                <p>
-                  Cold Spring Harbour Laboratory: Evolving Concept of Mitochondria: <a href='http://library.cshl.edu/Meetings/Mitochondria/program.php'>http://library.cshl.edu/Meetings/Mitochondria/program.php</a><br/>
-                  Metabolomics: Understanding Metabolism in the 21st Century <a href='https://www.futurelearn.com/courses/metabolomics'>https://www.futurelearn.com/courses/metabolomics</a>
-                </p>
+            </div>
+            <div class='cell auto out-vc' data-equalizer-watch>
+              <div class="in-vc">
+                <h5>
+                  <b>Patricia Opresko, Ph.D</b><br/>
+                  <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i> Website</a>
+                </h5>
               </div>
-              <div class='cell'>
-                <h4 class='bold'>COVID-19</h4>
-                <p>
-                  State Updates: <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a>
-                </p>
-              </div>
+            </div>
+          </div>
+          <div class='grid-x grid-padding-x grid-margin-y'>
+            <div class='cell shrink border-right'>
+              <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+            </div>
+            <div class='cell auto'>
+              <h5>
+                <b>Charleen Chu, Ph.D.</b><br/>
+                <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i> Website</a>
+              </h5> 
+            </div>
+          </div>
+          <div class='grid-x grid-padding-x grid-margin-y'>
+            <div class='cell shrink border-right'>
+              <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+            </div>
+            <div class='cell auto'>
+              <h5>
+                <b>Steven Chan,MD, PhD, FAHA</b><br/>
+                <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i> Website</a>
+              </h5> 
+            </div>
+          </div>
+          <div class='grid-x grid-padding-x grid-margin-y'>
+            <div class='cell shrink border-right'>
+              <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+            </div>
+            <div class='cell auto '>
+              <h5>
+                <b>Tzahi Cohen-Karni</b><br/>
+                <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i> Website</a>
+              </h5> 
+            </div>
+          </div>
+          <div class='grid-x grid-padding-x grid-margin-y'>
+            <div class='cell shrink border-right'>
+              <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+            </div>
+            <div class='cell auto'>
+              <h5>
+                <b>Michael Jurckzak</b><br/>
+                <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i> Website</a>
+                </h5> 
             </div>
           </div>
         </div>
       </div>
-      <%
-      }
-      %>
+    </div>
+    <div class='cell add-padd'>
+      <h3 class='center' id='resources'>Resources</h3>
+      <hr class="center-ball">
+      <div class='cell'>
+        <div class='grid-x grid-container grid-padding-x grid-padding-y medium-up-1 add-padd' >
+          <div class='cell'>
+            <h4 class='bold'>Aging related resources</h4>
+            <p>
+              AFAR: <a href='https://www.afar.org/'>https://www.afar.org/</a><br/>
+              Aging Research and Drug Discovery Meeting: <a href='http://www.agingpharma.org'>http://www.agingpharma.org</a><br/>
+              Aging Science talks: <a href='http://www.lamminglab.org/agingscitalks.html'>http://www.lamminglab.org/agingscitalks.html</a><br/>
+              CSH Mechanism of Aging: <a href='https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20'>https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20</a>
+            </p>
+          </div>
+          <div class='cell'>
+            <h4 class='bold'>Metabolism related resources</h4>
+            <p>
+              Cold Spring Harbour Laboratory: Evolving Concept of Mitochondria: <a href='http://library.cshl.edu/Meetings/Mitochondria/program.php'>http://library.cshl.edu/Meetings/Mitochondria/program.php</a><br/>
+              Metabolomics: Understanding Metabolism in the 21st Century <a href='https://www.futurelearn.com/courses/metabolomics'>https://www.futurelearn.com/courses/metabolomics</a>
+            </p>
+          </div>
+          <div class='cell'>
+            <h4 class='bold'>COVID-19</h4>
+            <p>
+              State Updates: <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
