--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -5,31 +5,41 @@ class='bg-img bg-main-header'
 style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
-      <%=researchData.title
-      %>
+      Research Interests
     </h1>
   </div>
 </div>
-<div class='grid-x grid-container add-padd' >
-  <div class='cell'>
-    <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
-      <div class='cell'>
-        <h3 class='center'>Recent Publications</h3>
-        <hr class="center-ball">
-      </div>
-      <div class='grid-x medium-up-3'>
-        <% for (let i = 0; i < 3; i++) { %>
-          <div class='cell'>
-            <div class='my-card'>
-              <h4 class='publication-heading'>
-                <%-results.publications[i].title %>
-              </h4>
-              <h5 class='publiction-journel'><%=results.publications[i].journal %></h5>
-            </div>
+<div class='grid-x medium-up-3 grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
+  <% for (let i = 0; i < 3; i++) { %>
+    <div class='cell'>
+      <div class='my-card center'>
+        <div 
+          class='card-img my-research-interest'
+          style='background-image: url("<%=results.researchIntrest[i].image %>");'
+        >
+          <div class='my-card-footer' data-equalizer-watch>
+            <h4 class='center bold'><%=results.researchIntrest[i].title %></h4>
           </div>
-        <% } %>
+        </div>
+        <a class='animated-arrow'  href="./research-interests/<%=results.researchIntrest[i].title.replace(/\s/g, '_')%>">
+          <span class='the-arrow -left'>
+            <span class='shaft'></span>
+          </span>
+          <span class='main'>
+            <span class='text'>
+              Learn More
+            </span>
+            <span class='the-arrow -right'>
+              <span class='shaft'></span>
+            </span>
+          </span>
+        </a>
       </div>
     </div>
+  <% } %>
+</div>
+<div class='grid-x grid-container add-padd' >
+  <div class='cell'>
     <div class='cell auto'>
       <h3 class='center' id='collaborators'>Collaborators</h3>
       <hr class="center-ball">
