--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -39,103 +39,101 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
   <% } %>
 </div>
 <div class='grid-x grid-container add-padd' >
-  <div class='cell'>
-    <div class='cell auto'>
-      <h3 class='center' id='collaborators'>Collaborators</h3>
-      <hr class="center-ball">
-    </div>
-    <div class='cell'>
-      <div class='grid-x grid-padding-y grid-padding-x' >
-        <div class='medium-6 medium-offset-3 large-offset-4 large-5 cell'>
-          <div class='grid-x grid-padding-x grid-margin-y' data-equalizer>
-            <div class='cell shrink border-right out-vc' data-equalizer-watch>
-              <div class='in-vc'>
-                <h5 class='no-margin'><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-              </div>
-            </div>
-            <div class='cell auto out-vc' data-equalizer-watch>
-              <div class="in-vc">
-                <h5>
-                  <b>Patricia Opresko, Ph.D</b><br/>
-                  <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i> Website</a>
-                </h5>
-              </div>
+  <div class='cell medium-3'>
+    <div class='grid-x'>
+      <div class='cell small-12'>
+        <h3 class='center' id='collaborators'>Collaborators</h3>
+        <hr class="center-ball">
+      </div>
+      <div class='cell small-12'>
+        <div class='grid-x grid-padding-x grid-margin-y' data-equalizer>
+          <div class='cell shrink border-right out-vc' data-equalizer-watch>
+            <div class='in-vc'>
+              <h5 class='no-margin'><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
             </div>
           </div>
-          <div class='grid-x grid-padding-x grid-margin-y'>
-            <div class='cell shrink border-right'>
-              <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-            </div>
-            <div class='cell auto'>
+          <div class='cell auto out-vc' data-equalizer-watch>
+            <div class="in-vc">
               <h5>
-                <b>Charleen Chu, Ph.D.</b><br/>
-                <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i> Website</a>
+                <b>Patricia Opresko, Ph.D</b><br/>
+                <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i> Website</a>
+              </h5>
+            </div>
+          </div>
+        </div>
+        <div class='grid-x grid-padding-x grid-margin-y'>
+          <div class='cell shrink border-right'>
+            <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+          </div>
+          <div class='cell auto'>
+            <h5>
+              <b>Charleen Chu, Ph.D.</b><br/>
+              <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i> Website</a>
+            </h5> 
+          </div>
+        </div>
+        <div class='grid-x grid-padding-x grid-margin-y'>
+          <div class='cell shrink border-right'>
+            <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+          </div>
+          <div class='cell auto'>
+            <h5>
+              <b>Steven Chan,MD, PhD, FAHA</b><br/>
+              <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i> Website</a>
+            </h5> 
+          </div>
+        </div>
+        <div class='grid-x grid-padding-x grid-margin-y'>
+          <div class='cell shrink border-right'>
+            <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+          </div>
+          <div class='cell auto '>
+            <h5>
+              <b>Tzahi Cohen-Karni</b><br/>
+              <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i> Website</a>
+            </h5> 
+          </div>
+        </div>
+        <div class='grid-x grid-padding-x grid-margin-y'>
+          <div class='cell shrink border-right'>
+            <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+          </div>
+          <div class='cell auto'>
+            <h5>
+              <b>Michael Jurckzak</b><br/>
+              <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i> Website</a>
               </h5> 
-            </div>
-          </div>
-          <div class='grid-x grid-padding-x grid-margin-y'>
-            <div class='cell shrink border-right'>
-              <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-            </div>
-            <div class='cell auto'>
-              <h5>
-                <b>Steven Chan,MD, PhD, FAHA</b><br/>
-                <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i> Website</a>
-              </h5> 
-            </div>
-          </div>
-          <div class='grid-x grid-padding-x grid-margin-y'>
-            <div class='cell shrink border-right'>
-              <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-            </div>
-            <div class='cell auto '>
-              <h5>
-                <b>Tzahi Cohen-Karni</b><br/>
-                <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i> Website</a>
-              </h5> 
-            </div>
-          </div>
-          <div class='grid-x grid-padding-x grid-margin-y'>
-            <div class='cell shrink border-right'>
-              <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
-            </div>
-            <div class='cell auto'>
-              <h5>
-                <b>Michael Jurckzak</b><br/>
-                <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i> Website</a>
-                </h5> 
-            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class='cell add-padd'>
-      <h3 class='center' id='resources'>Resources</h3>
-      <hr class="center-ball">
-      <div class='cell'>
-        <div class='grid-x grid-container grid-padding-x grid-padding-y medium-up-1 add-padd' >
-          <div class='cell'>
-            <h4 class='bold'>Aging related resources</h4>
-            <p>
-              AFAR: <a href='https://www.afar.org/'>https://www.afar.org/</a><br/>
-              Aging Research and Drug Discovery Meeting: <a href='http://www.agingpharma.org'>http://www.agingpharma.org</a><br/>
-              Aging Science talks: <a href='http://www.lamminglab.org/agingscitalks.html'>http://www.lamminglab.org/agingscitalks.html</a><br/>
-              CSH Mechanism of Aging: <a href='https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20'>https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20</a>
-            </p>
-          </div>
-          <div class='cell'>
-            <h4 class='bold'>Metabolism related resources</h4>
-            <p>
-              Cold Spring Harbour Laboratory: Evolving Concept of Mitochondria: <a href='http://library.cshl.edu/Meetings/Mitochondria/program.php'>http://library.cshl.edu/Meetings/Mitochondria/program.php</a><br/>
-              Metabolomics: Understanding Metabolism in the 21st Century <a href='https://www.futurelearn.com/courses/metabolomics'>https://www.futurelearn.com/courses/metabolomics</a>
-            </p>
-          </div>
-          <div class='cell'>
-            <h4 class='bold'>COVID-19</h4>
-            <p>
-              State Updates: <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a>
-            </p>
-          </div>
+  </div>
+  <div class='cell medium-9 add-padd'>
+    <h3 class='center' id='resources'>Resources</h3>
+    <hr class="center-ball">
+    <div class='cell'>
+      <div class='grid-x grid-container grid-padding-x grid-padding-y medium-up-1 add-padd' >
+        <div class='cell'>
+          <h4 class='bold'>Aging related resources</h4>
+          <p>
+            AFAR: <a href='https://www.afar.org/'>https://www.afar.org/</a><br/>
+            Aging Research and Drug Discovery Meeting: <a href='http://www.agingpharma.org'>http://www.agingpharma.org</a><br/>
+            Aging Science talks: <a href='http://www.lamminglab.org/agingscitalks.html'>http://www.lamminglab.org/agingscitalks.html</a><br/>
+            CSH Mechanism of Aging: <a href='https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20'>https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20</a>
+          </p>
+        </div>
+        <div class='cell'>
+          <h4 class='bold'>Metabolism related resources</h4>
+          <p>
+            Cold Spring Harbour Laboratory: Evolving Concept of Mitochondria: <a href='http://library.cshl.edu/Meetings/Mitochondria/program.php'>http://library.cshl.edu/Meetings/Mitochondria/program.php</a><br/>
+            Metabolomics: Understanding Metabolism in the 21st Century <a href='https://www.futurelearn.com/courses/metabolomics'>https://www.futurelearn.com/courses/metabolomics</a>
+          </p>
+        </div>
+        <div class='cell'>
+          <h4 class='bold'>COVID-19</h4>
+          <p>
+            State Updates: <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a>
+          </p>
         </div>
       </div>
     </div>
