Added research intrests bacl

--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -39,7 +39,7 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
   <% } %>
 </div>
 <div class='grid-x grid-container add-padd' >
-  <div class='cell medium-3'>
+  <div class='cell medium-5'>
     <div class='grid-x'>
       <div class='cell small-12'>
         <h3 class='center' id='collaborators'>Collaborators</h3>
@@ -108,7 +108,7 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
       </div>
     </div>
   </div>
-  <div class='cell medium-9 add-padd'>
+  <div class='cell medium-7'>
     <h3 class='center' id='resources'>Resources</h3>
     <hr class="center-ball">
     <div class='cell'>
@@ -132,7 +132,7 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
         <div class='cell'>
           <h4 class='bold'>COVID-19</h4>
           <p>
-            State Updates: <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a>
+            <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>State Updates</a>
           </p>
         </div>
       </div>
