Added other research

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
     </h1>
   </div>
 </div>
-<div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
+<div class='grid-x grid-padding-x grid-container grid-padding-y add-padd' id='mission' data-equalizer>
   <div class='medium-6 large-7 cell out-vc'  data-equalizer-watch>
     <div class='in-vc'>
       <h3 class='center'>Mission</h3>
