--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
             <ul class="dropdown menu show-for-medium white" id='header-menu-items' data-dropdown-menu>
               <% for(let i = 0; i < pages.main.length; i++) { %>
               <li>
-                <a class='top-bar-link' href="<% if(dirName) { %><%=dirName%><%}%><%= pages.main[i].link %>">
+                <a class='top-bar-link' onclick="hamburgerMenu()" href="<% if(dirName) { %><%=dirName%><%}%><%= pages.main[i].link %>">
                   <%= pages.main[i].title %>
                 </a>
               </li>
