--- a/views/pages/publications.ejs
+++ b/views/pages/publications.ejs
@@ -42,7 +42,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
           </p>
         </div>
         <div class='cell medium-4'>
-          <h5><%-results[i].journal %></h5>
+          <h5 class='bold'><%-results[i].journal %></h5>
           <p>Published<br/><%-results[i].year %></p>
           <a class='animated-arrow'  href="<%=results[i].link%>">
             <span class='the-arrow -left'>
