--- a/views/pages/publications.ejs
+++ b/views/pages/publications.ejs
@@ -13,15 +13,15 @@ style='background-image:url("img/bg/bg1.jpg")'>
   <%
     for(let i = 0; i < results.length; i++){
     const authors = results[i].author.split(',');
-    const start = authors.length <= 14 ? authors.length : 10;
-    const end = authors.length > 14 ? authors.length - 4 : false;
+    const start = authors.length <= 12 ? authors.length : 8;
+    const end = authors.length > 12 ? authors.length - 4 : false;
   %>
   <div class='cell'>
     <div class='card publications-card'>
       <div class='grid-x grid-padding-x'>
         <div class='cell medium-8'>
           <h4 class='publications-heading'><%-results[i].title %></h4>
-          <p>Authors (<%= authors.length %>)<br/>
+          <p><small>Authors (<%= authors.length %>)</small><br/>
             <%
               for(let j = 0; j < start; j++) {
             %> 
@@ -42,8 +42,8 @@ style='background-image:url("img/bg/bg1.jpg")'>
           </p>
         </div>
         <div class='cell medium-4'>
-          <h5 class='bold'><%-results[i].journal %></h5>
-          <p>Published<br/><%-results[i].year %></p>
+          <h4 class='publications-heading'><%-results[i].journal %></h4>
+          <p><small>Published</small><br/><%-results[i].year %></p>
           <a class='animated-arrow'  href="<%=results[i].link%>">
             <span class='the-arrow -left'>
               <span class='shaft'></span>
