Added menu item

--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -112,7 +112,7 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
     <h3 class='center' id='resources'>Resources</h3>
     <hr class="center-ball">
     <div class='cell'>
-      <div class='grid-x grid-container grid-padding-x grid-padding-y medium-up-1 add-padd' >
+      <div class='grid-x grid-container grid-padding-x grid-padding-y medium-up-1' >
         <div class='cell'>
           <h4 class='bold'>Aging related resources</h4>
           <p>
