Added only 5 news

--- a/views/pages/labNews.ejs
+++ b/views/pages/labNews.ejs
@@ -10,7 +10,7 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg1.jpg
   </div>
 </div>
 <div class='grid-container add-padd' >
-  <% for (let i = 0; i < results.length; i++) { %>
+  <% for (let i = 0; i < 5; i++) { %>
     <div class="marketing-site-content-section">
       <% if(i % 2) {%>
       <div class="marketing-site-content-section-img">
