Added bg images

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,8 +2,8 @@
 <% include ../partials/header %>  
 
 <div class="twentytwenty-container ">
-  <img src="img/bg/young-versus-old-aging-new.jpg" class='big-bg-img'/>
-  <img src="img/bg/young-versus-old-aging-old.jpg" class='big-bg-img' />
+  <img src="img/bg/bg_new.jpg" class='big-bg-img'/>
+  <img src="img/bg/bg_oldjpg" class='big-bg-img' />
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       Decoding the metabolic responses to DNA damage that drive aging
