--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,9 +4,9 @@
 <div class="twentytwenty-container ">
   <img src="img/bg/bg_new.jpg" class='big-bg-img'/>
   <img src="img/bg/bg_old.jpg" class='big-bg-img' />
-  <div class='bg-center-container'>
-    <h1 class='bg-heading'>
-      Decoding the metabolic responses to DNA damage that drive aging
+  <div class='my-left-menu'>
+    <h1 class='left-menu-list'>
+      Rsearch
     </h1>
   </div>
 </div>
