--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
   <img src="img/bg/bg_old.jpg" class='big-bg-img' />
   <div class='my-left-menu'>
     <h1 class='left-menu-list'>
-      Rsearch
+      Research
     </h1>
   </div>
 </div>
