--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,22 @@
         </span>
         <span class='main'>
           <span class='text'>
-            Learn More
+            Research
+          </span>
+          <span class='the-arrow -right'>
+            <span class='shaft'></span>
+          </span>
+        </span>
+      </a>
+    </div>
+    <div class='left-menu-list'>
+      <a class='animated-arrow' href='./Aditi-Gurkar'>
+        <span class='the-arrow -left'>
+          <span class='shaft'></span>
+        </span>
+        <span class='main'>
+          <span class='text'>
+            Research
           </span>
           <span class='the-arrow -right'>
             <span class='shaft'></span>
