--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
   <img src="img/bg/bg_new.jpg" class='big-bg-img'/>
   <img src="img/bg/bg_old.jpg" class='big-bg-img' />
   <div class='my-left-menu'>
-    <div class='left-menu-list'>
+    <div id='left-menu' class='left-menu-list'>
       <a class='animated-arrow' href='./Aditi-Gurkar'>
         <span class='the-arrow -left'>
           <span class='shaft'></span>
