--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1083,12 +1083,13 @@ hr.center-ball:before {
 
 /* Banner styles */
 .main-banner {
-  min-height: 100vh;
   width: 100%;
   position: relative;
 }
 
 .banner {
+  min-height: 100vh;
+  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
