--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
 
 <div class='main-banner'>
   <div class='banner'>
-    <div class='banner-card'>
+    <div class='banner-card banner-left'>
       <h3>PlaceHolder</h3>
       <a class='animated-arrow' href='./Aditi-Gurkar'>
         <span class='the-arrow -left'>
