--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,19 +5,8 @@
   <div class='banner'>
     <div class='banner-card banner-left'>
       <h4>UNCOVERING CELLULAR RESPONSES TO GENOTOXIC STRESS</h4>
-      <a class='animated-arrow' href='./Aditi-Gurkar'>
-        <span class='the-arrow -left'>
-          <span class='shaft'></span>
-        </span>
-        <span class='main'>
-          <span class='text'>
-            Research Interest
-          </span>
-          <span class='the-arrow -right'>
-            <span class='shaft'></span>
-          </span>
-        </span>
-      </a><br/>
+      <button class="hollow button" href="#">Research Interest</button>
+      <br/>
       <a class='animated-arrow' href='./Aditi-Gurkar'>
         <span class='the-arrow -left'>
           <span class='shaft'></span>
