--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
       <h4>UNCOVERING CELLULAR RESPONSES TO GENOTOXIC STRESS</h4>
       <button class="hollow button my-banner-btn" href="#">Research Interest</button>
       <br/>
-      <a class='animated-arrow' href='./Aditi-Gurkar'>
+      <a class='animated-arrow my-banner-arrow' href='./Aditi-Gurkar'>
         <span class='the-arrow -left'>
           <span class='shaft'></span>
         </span>
