--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,7 +16,7 @@
             Collaboration
           </span>
           <span class='the-arrow -right'>
-            <span class='shaft'></span>
+            <span class='shaft my-banner-shaft'></span>
           </span>
         </span>
       </a>
