--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,7 +9,7 @@
       <br/>
       <a class='animated-arrow my-banner-arrow' href='./Aditi-Gurkar'>
         <span class='the-arrow -left'>
-          <span class='shaft'></span>
+          <span class='shaft my-banner-shaft'></span>
         </span>
         <span class='main'>
           <span class='text'>
