--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,19 @@
   <div class='banner'>
     <div class='banner-card banner-left'>
       <h4>UNCOVERING CELLULAR RESPONSES TO GENOTOXIC STRESS</h4>
-      <button class="hollow button my-banner-btn" href="#">Research Interest</button>
+      <a class='animated-arrow my-banner-arrow' href='./Aditi-Gurkar'>
+        <span class='the-arrow -left'>
+          <span class='shaft my-banner-shaft'></span>
+        </span>
+        <span class='main'>
+          <span class='text'>
+            Research Interest
+          </span>
+          <span class='the-arrow -right'>
+            <span class='shaft my-banner-shaft'></span>
+          </span>
+        </span>
+      </a>
       <br/>
       <a class='animated-arrow my-banner-arrow' href='./Aditi-Gurkar'>
         <span class='the-arrow -left'>
